mymoves (0.2.0) unstable; urgency=low
 
  * Use the 8 most reliable gestures 
  * Support for running scripts based on gestures 

 -- sandst1 <topi.santakivi@gmail.com>  Sun, 06 Nov 2011 23:41:02 +0200

mymoves (0.1.4) unstable; urgency=low
 
  * Improved recognition accuracy
  * 8 new gestures: Corner-to-corner swipes

 -- sandst1 <topi.santakivi@gmail.com>  Sun, 06 Nov 2011 23:41:02 +0200

mymoves (0.1.3) unstable; urgency=low
 
  * 12 new gestures
  * Option detach an app from a gesture
  * Fixed icon scaling in app list

 -- sandst1 <topi.santakivi@gmail.com>  Sat, 22 Oct 2011 22:23:02 +0300

mymoves (0.1.2) unstable; urgency=low
  
  * Added a howto-screen

 -- sandst1 <topi.santakivi@gmail.com>  Sun, 02 Oct 2011 14:36:31 +0300

mymoves (0.1.1) unstable; urgency=low
  
  * Moved mymoves.conf to ~/.config
  * About screen
  * Splash screen
  * Logo to main page
  * Icons in app selection list
  * Slight tweaking of the UI

 -- sandst1 <topi.santakivi@gmail.com>  Sun, 02 Oct 2011 14:36:31 +0300

mymoves (0.1.0) unstable; urgency=low
  
  * First release with mymoveserver + mymoves in the same package

 -- sandst1 <topi.santakivi@gmail.com>  Wed, 28 Sep 2011 20:07:16 +0300

mymoves (0.0.3) unstable; urgency=low

  * Added cancel button to gesture list
  * Observing gestures isn't stopped if quitting in MyMoves view

 -- sandst1 <topi.santakivi@gmail.com>  Wed, 28 Sep 2011 19:04:08 +0300

mymoves (0.0.2) unstable; urgency=low

  * First user-friendly release. Most significant changes:
    - Simple configuration UI for selecting app for each gesture
    - Option to start/stop observing gestures

 -- sandst1 <topi.santakivi@gmail.com>  Sat, 24 Sep 2011 18:12:52 +0300

mymoves (0.0.1) unstable; urgency=low

  * Initial Release.

 -- Topi <topi@unknown>  Sun, 21 Aug 2011 23:43:55 +0300